--- a/compute/kubernetes/api-cli/managing-storage.mdx
+++ b/compute/kubernetes/api-cli/managing-storage.mdx
@@ -70,6 +70,10 @@ The CSI driver allows to use [Persistent Volumes](https://kubernetes.io/docs/con
     $ kubectl apply -f pvc-deployment/deployment.yaml
     ```
 
+<Message type="note">
+  At the moment Scaleway Block Storage supports only `ReadWriteOnce` access mode
+</Message>
+
 ## Creating raw block volumes 
 
 1. Create a block volume and make it available in the pod as a raw block device. In order to do so, `volumeMode` must be set to Block:
